--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,9 +76,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    // Glide
-    implementation 'com.github.bumptech.glide:glide:4.13.2'
-    kapt 'com.github.bumptech.glide:compiler:4.13.2'
+    // Coil(Image Loading)
+    implementation("io.coil-kt:coil:2.2.1")
 
     //Dagger-Hilt
     implementation("com.google.dagger:hilt-android:$hilt_version")
